<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Source</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="sections">Sections</string>
    <string name="back">Back</string>
    <string name="category_name">Category name</string>
    <string name="subscribe">Subscribe</string>
    <string name="search_hint">Search the Source</string>
    <string name="left_arrow">&#xf0d9;</string>
    <string name="icon_leaf">&#xf06c;</string>
    <string name="icon_bookmark">&#xf02e;</string>
    <string name="icon_glass">&#xf000;</string>
    <string name="icon_cloud">&#xf0c2;</string>
    <string name="icon_calendar">&#xf073;</string>
    <string name="icon_star">&#xf005;</string>
    <string name="icon_star_white">&#xf006;</string>
    <string name="icon_user">&#xf007;</string>
    <string name="icon_health">&#xf21e;</string>
    <string name="icon_industry">&#xf275;</string>
    <string name="icon_eye">&#xf06e;</string>
    <string name="icon_microphone">&#xf130;</string>
    <string name="icon_globe">&#xf0ac;</string>
    <string name="icon_flag">&#xf024;</string>
    <string name="icon_opinion">&#xf1fb;</string>
    <string name="icon_building">&#xf1ad;</string>
    <string name="icon_cubes">&#xf1b3;</string>
    <string name="icon_customization">&#xf013;</string>
    <string name="icon_filter">&#xf0b0;</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="subscribe_button">New User? Subscribe here!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">e-mail</string>
    <string name="renew_subscription">Renew subscription</string>
    <string name="logout">Log out</string>
    <string name="active_subscription">Your subscription is active</string>
    <string name="inactive_subscription">Your subscription is not active</string>
    <string name="expiration_date">It will end at 12. January 2017.</string>
    <string name="package_name">Package name</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
</resources>