<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/blue" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2pt"
            android:gravity="center_vertical"
            android:onClick="GoBack"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/backBt"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/left_arrow"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2pt"
                android:gravity="center_vertical"
                android:text="@string/back"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:padding="5pt"
            android:src="@drawable/logo" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:background="@android:color/transparent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/note_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/active_subscription"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/expiration_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/expiration_date"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/first_name_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/first_name"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:id="@+id/firstname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:editable="false"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:lines="1"
                android:padding="5dp"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:layout_marginBottom="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/last_name_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/first_name"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:id="@+id/lastname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:editable="false"
                android:gravity="center_vertical"
                android:hint="@string/last_name"
                android:lines="1"
                android:padding="5dp"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:layout_marginBottom="5dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/email_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                android:textColor="@android:color/darker_gray" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:editable="false"
                android:gravity="center_vertical"
                android:hint="@string/email"
                android:lines="1"
                android:padding="5dp"
                android:textColor="@android:color/black" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.5dip"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/package_name_label"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/package_name"
                android:textColor="@android:color/darker_gray" />

            <TextView
                android:id="@+id/package_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/package_name"
                android:textColor="@android:color/black" />

            <Button
                android:id="@+id/renew_subscription_bt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/custom_button"
                android:padding="10dp"
                android:text="@string/renew_subscription"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/logout_bt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/blue_transparent_button"
                android:padding="10dp"
                android:text="@string/logout"
                android:onClick="Logout"
                android:textColor="@color/blue" />

            <Button
                android:id="@+id/forgot_pass_bt"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/transparent"
                android:padding="10dp"
                android:text="@string/forgot_password"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>