<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/blue" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2pt"
            android:gravity="center_vertical"
            android:onClick="GoBack"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/backBt"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/left_arrow"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2pt"
                android:gravity="center_vertical"
                android:text="@string/back"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:padding="5pt"
            android:text="@string/category_name"
            android:textColor="@android:color/white"
            android:textSize="8pt"
            android:textStyle="bold" />
    </RelativeLayout>

    <ListView
        android:id="@+id/category_post_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#FFFFFF"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:scrollbars="none" />

</LinearLayout>