<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@android:color/transparent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/close_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="5dp"
            android:layout_gravity="right"
            android:gravity="right" >

            <TextView
                android:id="@+id/close_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="5dp"
                android:gravity="center_vertical"
                android:text="Close"
                android:textColor="@android:color/white"
                android:textSize="@dimen/close_bt_text_size" />

            <ImageView
                android:id="@+id/close_bt"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_toRightOf="@+id/close_txt"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_close" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_user" />

            <EditText
                android:id="@+id/username"
                android:lines="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/username"
                android:padding="5dp"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@android:color/white" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_lock" />

            <EditText
                android:id="@+id/password"
                android:lines="1"
                android:inputType="textPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:padding="5dp"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dip"
            android:background="@android:color/white" />

        <Button
            android:id="@+id/sign_in_bt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/custom_button"
            android:padding="10dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/subscribe_bt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@drawable/transparent_custom_button"
            android:padding="10dp"
            android:text="@string/subscribe_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/forgot_pass_bt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="@android:color/transparent"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>