<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/blue" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="2pt"
            android:gravity="center_vertical"
            android:onClick="GoBack"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/backBt"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center_vertical"
                android:text="@string/left_arrow"
                android:textColor="#FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="2pt"
                android:gravity="center_vertical"
                android:text="@string/back"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:id="@+id/category_name"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:padding="5pt"
            android:text="@string/category_name"
            android:textColor="@android:color/white"
            android:textSize="8pt"
            android:textStyle="bold" />

        <Button
            android:id="@+id/shareBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="5pt"
            android:background="@android:drawable/ic_menu_share"
            android:onClick="Share" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/top_main_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/image_news"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:orientation="vertical"
                android:src="@drawable/logo" >
            </ImageView>

            <TextView
                android:id="@+id/top_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="7dp"
                android:paddingLeft="@dimen/content_padding"
                android:paddingRight="@dimen/content_padding"
                android:paddingTop="@dimen/content_padding"
                android:text="The global network of water professinals"
                android:textColor="#000000"
                android:textSize="@dimen/title_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/top_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:paddingLeft="@dimen/content_padding"
                android:text="by Paul Bell - September 10, 2016"
                android:textColor="@android:color/darker_gray"
                android:textSize="@dimen/author_size" />

            <WebView
                android:id="@+id/top_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/content_padding"
                android:textColor="#000000"
                android:textSize="8pt" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>