<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:orientation="vertical"
            tools:context="android.magazineapp.shell.MainActivity" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/blue" >

                <LinearLayout
                    android:id="@+id/sections"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="3pt"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/backBt"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:gravity="center_vertical"
                        android:text="@string/left_arrow"
                        android:textColor="#FFFFFF" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_marginLeft="2pt"
                        android:gravity="center_vertical"
                        android:text="@string/sections"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_centerInParent="true"
                    android:padding="5pt"
                    android:src="@drawable/logo" />

                <Button
                    android:id="@+id/rightBt"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_margin="3pt"
                    android:background="@drawable/transparent_button_curved"
                    android:onClick="GoToSubscribe"
                    android:padding="6dp"
                    android:text="@string/subscribe"
                    android:textColor="#FFFFFF"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/userBt"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
                    android:layout_margin="5pt"
                    android:background="@drawable/ic_user"
                    android:onClick="GoToUserInfo"
                    android:visibility="invisible" />
            </RelativeLayout>

            <android.support.v4.widget.SwipeRefreshLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/swipe_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ScrollView
                    android:id="@+id/main_scroll"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/top_news"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <include layout="@layout/main_article" />

                        <HorizontalScrollView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:scrollbars="none" >

                            <LinearLayout
                                android:id="@+id/main_horizontal_scrollview"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal" >
                            </LinearLayout>
                        </HorizontalScrollView>
                    </LinearLayout>
                </ScrollView>
            </android.support.v4.widget.SwipeRefreshLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/side_menu"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp" >

            <!--
                 <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="horizontal" >
            -->
            <!--
                     <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search" />
            -->

            <EditText
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text" />
            <!-- </LinearLayout> -->
        </LinearLayout>

        <ListView
            android:id="@+id/left_expandableListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#FFFFFF"
            android:choiceMode="singleChoice"
            android:divider="#CFCFCF"
            android:dividerHeight="1dp"
            android:scrollbars="none" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>